# inductive-graphs

./: LICENSE  README.md  default.nix  inductive-graphs.cabal  inductive-graphs.nix  shell.nix
src/Data/: Graph.hs  Heap.hs
src/Data/Graph/: InductiveGraph.hs  Query.hs
tests/doctest/: Doctests.hs
