-- The name of the package.
name:                inductive-graphs 

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Samuel Evans-Powell

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          samueldavid.ep@gmail.com

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules:     Data.Graph.InductiveGraph
                     , Data.Graph.Query
                     , Data.Heap
                     , Data.Graph
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  ghc-options:         -Wall
                       -fno-warn-orphans
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.10 && <4.11
                     , containers == 0.5.*
                     , safe
                     , bytestring >= 0.10
                     , transformers >= 0.5
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite doctests
 -- Base language which the package is written in.
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

  ghc-options:         -threaded
  main-is:             Doctests.hs
  hs-source-dirs:      tests/doctest
  build-depends:       base >= 4.10 && <4.11
                     , inductive-graphs
                     , doctest >= 0.11 && < 0.16